2010-04-21  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.AspNet.Gui/AspNetEditorExtension.cs: Worked on
	  ASP.NET completion.

2010-04-20  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.AspNet.Gui/ILanguageCompletionBuilder.cs: 

	* MonoDevelop.AspNet.Gui/AspNetEditorExtension.cs: Worked on
	  ASP.NET completion.

2010-04-20  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.AspNet.Gui/ILanguageCompletionBuilder.cs: fixed
	  ASP.NET completion.

2010-04-19  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.AspNet.Gui/AspNetEditorExtension.cs:
	* MonoDevelop.AspNet.Gui/ILanguageCompletionBuilder.cs: Worked
	  on ASP.NET completion.

2010-03-22  Lluis Sanchez Gual  <lluis@novell.com>

	* AssemblyInfo.cs:
	* MonoDevelop.AspNet.addin.xml: Bumped MD version.

2010-03-17  Lluis Sanchez Gual  <lluis@novell.com>

	* MonoDevelop.AspNet.csproj: Remove import off mono.addins
	  targets.

2010-03-17  Lluis Sanchez Gual  <lluis@novell.com>

	* Makefile.am:
	* gtk-gui/gui.stetic:
	* MonoDevelop.AspNet.csproj:
	* MonoDevelop.AspNet.addin.xml:
	* MonoDevelop.Html/PathCompletion.cs:
	* MonoDevelop.AspNet/XspParameters.cs:
	* MonoDevelop.AspNet/WebTypeManager.cs:
	* MonoDevelop.Html/HtmlSchemaService.cs:
	* MonoDevelop.AspNet.Parser/Document.cs:
	* MonoDevelop.AspNet/AspNetAppProject.cs:
	* MonoDevelop.AspNet.Parser/Directive.cs:
	* MonoDevelop.AspNet/AspNetToolboxNode.cs:
	* MonoDevelop.AspNet.Gui/BrowserLauncher.cs:
	* MonoDevelop.AspNet.Gui/XspOptionsPanel.cs:
	* MonoDevelop.Html/DocTypeCompletionData.cs:
	* MonoDevelop.AspNet.Completion/SimpleLists.cs:
	* MonoDevelop.Html/HtmlCompletionDataProvider.cs:
	* MonoDevelop.AspNet.Gui/AspNetEditorExtension.cs:
	* MonoDevelop.AspNet.Gui/BaseHtmlEditorExtension.cs:
	* MonoDevelop.AspNet.Deployment/WebDeployService.cs:
	* MonoDevelop.AspNet.Deployment/WebDeployCommands.cs:
	* MonoDevelop.AspNet.Gui/AspNetConfigurationPanel.cs:
	* MonoDevelop.AspNet/AspNetAppProjectConfiguration.cs: