@@ -1,3 +1,9 @@
+2010-04-26  Mike Krüger  <mkrueger@novell.com>
+
+	* MonoDevelop.AspNet/AspNetSyntaxMode.cs:
+	* MonoDevelop.AspNet.Gui/AspNetEditorExtension.cs: Worked on
+	  ASP.NET highlighting.
+
 2010-04-21  Mike Krüger  <mkrueger@novell.com>
 
 	* MonoDevelop.AspNet.Gui/AspNetEditorExtension.cs: Worked on
